Исправлены формулировки и уточнены термины в разделе о парадигме AI, включая изменения в описании генерации дополненной извлечением (RAG) и функциональных агентов.

--- a/2. Что делает AI систему агентом.md
+++ b/2. Что делает AI систему агентом.md
@@ -14,7 +14,7 @@
 
 Агенты становятся все более популярными с ошеломляющей скоростью. Согласно недавним исследованиям, большинство крупных IT-компаний активно используют этих агентов, и пятая часть из них только начала в прошлом году. Финансовые рынки также обращают внимание. К концу 2024 года AI-агент стартапы привлекли более $2 миллиардов, и рынок оценивался в $5,2 миллиарда. Ожидается, что он взорвется до почти $200 миллиардов к 2034 году. Короче говоря, все признаки указывают на то, что AI-агенты будут играть огромную роль в нашей будущей экономике.
 
-Всего за два года AI-парадигма драматически изменилась, перейдя от простой автоматизации к сложным автономным системам (см. рис. 2). Изначально рабочие процессы полагались на базовые промпты и триггеры для обработки данных с LLM. Это эволюционировало с извлечением-усиленным генерированием (RAG), которое улучшило надежность, заземляя модели на фактической информации. Затем мы увидели развитие индивидуальных AI-агентов, способных использовать различные инструменты. Сегодня мы входим в эру агентного ИИ, где команда специализированных агентов работает в концерте для достижения сложных целей, отмечая значительный скачок в совместной силе ИИ.
+Всего за два года AI-парадигма радикально изменилась, перейдя от простой автоматизации к сложным автономным системам (см. рис. 2). Изначально рабочие процессы полагались на базовые промпты и триггеры для обработки данных с LLM. Парадигма эволюционировала к генерации дополненной извлечением (RAG), которая улучшила надежность, заземляя модели на фактической информации. Затем мы увидели развитие индивидуальных AI-агентов, способных использовать различные инструменты. Сегодня мы входим в эру агентного ИИ, где команда специализированных агентов работает в концерте для достижения сложных целей, отмечая значительный скачок в совместной силе ИИ.
 
 ![][image2]
 
@@ -30,7 +30,7 @@
 
 ### Уровень 1: Связанный решатель проблем
 
-На этом уровне LLM становится функциональным агентом, подключаясь к внешним инструментам и используя их. Его решение проблем больше не ограничено его предобученными знаниями. Вместо этого он может выполнять последовательность действий для сбора и обработки информации из источников, таких как интернет (через поиск) или базы данных (через извлечение-усиленное генерирование, или RAG). Для детальной информации обратитесь к главе 14.
+На этом уровне LLM становится функциональным агентом, подключаясь к внешним инструментам и используя их. Его решение проблем больше не ограничено его предобученными знаниями. Вместо этого он может выполнять последовательность действий для сбора и обработки информации из источников, таких как интернет (через поиск) или базы данных (через генерацию дополненную извлечением, или RAG). Для детальной информации обратитесь к главе 14.
 
 Например, чтобы найти новые телешоу, агент распознает необходимость в текущей информации, использует инструмент поиска для ее поиска, а затем синтезирует результаты. Критично, он также может использовать специализированные инструменты для более высокой точности, такие как вызов финансового API для получения живой цены акций AAPL. Эта способность взаимодействовать с внешним миром через множественные шаги является основной возможностью агента Уровня 1.
 
