Исправлено слово "инженерит" на "проектирует" в контексте работы туристического ассистента для улучшения точности формулировок.

--- a/2. Что делает AI систему агентом.md
+++ b/2. Что делает AI систему агентом.md
@@ -40,7 +40,7 @@
 
 Сначала агент выходит за рамки использования одного инструмента для решения сложных многочастных проблем через стратегическое решение проблем. По мере выполнения последовательности действий он активно выполняет инженерию контекста: стратегический процесс выбора, упаковки и управления наиболее релевантной информацией для каждого шага. Например, чтобы найти кофейню между двумя локациями, он сначала использует инструмент картографирования. Затем он инженерит этот вывод, курируя короткий, сфокусированный контекст — возможно, просто список названий улиц — для подачи в локальный инструмент поиска, предотвращая когнитивную перегрузку и обеспечивая эффективность и точность второго шага. Для достижения максимальной точности от ИИ ему должна быть дана короткая, сфокусированная и мощная информация. Инженерия контекста — это дисциплина, которая достигает этого, стратегически выбирая, упаковывая и управляя наиболее критической информацией из всех доступных источников. Она эффективно курирует ограниченное внимание модели для предотвращения перегрузки и обеспечения высококачественной, эффективной производительности на любой данной задаче. Для детальной информации обратитесь к Приложению A.
 
-Этот уровень приводит к проактивной и непрерывной работе. Туристический ассистент, связанный с вашим email, демонстрирует это, инженерируя контекст из многословного email подтверждения рейса; он выбирает только ключевые детали (номера рейсов, даты, локации) для упаковки для последующих вызовов инструментов к вашему календарю и API погоды.
+Этот уровень приводит к проактивной и непрерывной работе. Туристический ассистент, связанный с вашим email, демонстрирует это, проектируя контекст из многословного email подтверждения рейса; он выбирает только ключевые детали (номера рейсов, даты, локации) для упаковки для последующих вызовов инструментов к вашему календарю и API погоды.
 
 В специализированных областях, таких как разработка программного обеспечения, агент управляет целым рабочим процессом, применяя эту дисциплину. Когда назначается отчет об ошибке, он читает отчет и получает доступ к кодовой базе, затем стратегически инженерит эти большие источники информации в мощный, сфокусированный контекст, который позволяет ему эффективно писать, тестировать и отправлять правильный патч кода.
 
